# meson-build-system

Absolute-Beginner-Guide/: README.md
Absolute-Beginner-Guide/testproject/: meson.build  tags  testproject.c
Absolute-Beginner-Guide/testproject/.cache/clangd/index/: testproject.c.6196D193C03F937F.idx
Beginner-Guide/: README.md
Beginner-Guide/testproject/: testproject.c
Building-SDL2-App-from-Scratch/sdldemo/: meson.build  sdlprog.c
Building-SDL2-App-from-Scratch/sdldemo/subprojects/SDL2-2.30.3/: .meson-subproject-wrap-hash.txt
Syntax/: bar.c  foo.c  meson.build  syntax.c
Tutorial/: README.md  main.c  meson.build
